--- a/src/components/search_car_page/main.css
+++ b/src/components/search_car_page/main.css
@@ -6,17 +6,27 @@
 
 .form {
   background-color: #fff;
-  width: 80%;
   border: 2px solid #f1f1f1;
   margin: auto;
   box-shadow: 0px 1px 2px 1px #00000026;
 }
 
-label {
+.form label {
   white-space: nowrap;
 }
 
-@media only screen and (max-width: 768px) {
+/* list car */
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  gap: 20px;
+}
+
+.card-container .card {
+  box-shadow: 0px 8px 16px rgba(129, 134, 142, 0.08);
+}
+
+@media only screen and (max-width: 992px) {
   /* search bar */
   .form-container {
     bottom: 0;
